# flwi-spacetraders-agent

./: .gitignore  Cargo.toml  TODO.md  docker-compose.yaml  justfile  rustfmt.toml  supply-chain.md
src/: db.rs  (+10 more)
st-core/: Cargo.toml
st-core/.sqlx/: query-179cd95ab3532d5d96e00b8642e45b715cae7e062ea6ce2b6512dd4d9d52c752.json  query-2b7ade739ce444d2a05e063747571f255b5f45e96b0a7c708fb6a4522bc47c98.json  query-4bc466b1e25062a2ad7963c550de978d7f3786741099d0cc6648c11237ed6e16.json  query-522befdd240f0501831d55615709a7bf242d445a64a41eee335bd16323fcaec9.json  query-7e35726c1ec7bcf0582d2102caaba36293a028aa3009fe77cb244531d398d6cd.json  query-ac168a46734b9ceb0bfd2fe037f981a7046bf70d269ce559ab58dd17411ba648.json  query-ac60085f48b4c244c6b0487d17dd06570494891106594df55db0dd4afb698e06.json  query-dd19b5e60088f8ab63ccb523a466d6a1b5e54fb0430255ec04f6fd5e42bb8cd2.json
st-core/fixtures/: broken-again-details.json  broken-construction-fleet-details-1.json  broken-construction-fleet-details.json
st-core/migrations/: 20240812170000_create_table_status.sql  20240822122931_create_table_waypoints.sql  20240827120523_create_table_systems.sql
st-core/src/: agent.rs  agent_manager.rs  bmc_blackboard.rs  cargo_transfer_manager.rs  configuration.rs  contract_manager.rs  fleet.rs  fleet_admiral.rs  lib.rs  materialized_supply_chain_manager.rs  pagination.rs  reqwest_helpers.rs  ship.rs  st_client.rs  supply_chain.rs  survey_manager.rs  transfer_cargo_manager.rs
st-domain/: Cargo.toml
st-domain/fixtures/: active_trades_from_ledger_entries_creates_duplicates.json  latest.json  latest_ledger_entries_for_testing.json  materialize_supply_chain_input_data.json  materialized_supply_chain_input_data_laser_rifles_problem_with_diamonds.json  treasurer_test_ledger_data_failed_completion_of_ship_purchase_after_restart_of_treasurer.json  treasury-from-ledger-error.json
st-domain/src/: blackboard_ops.rs  cargo_transfer.rs  lib.rs  messages.rs  st_model.rs  supply_chain.rs  trading.rs
st-server/: Cargo.toml  tailwind.config.js
st-server/src/: app.rs  behavior_tree_page.rs  cli_args.rs  contract_overview_page.rs  db_overview_page.rs  fleet_overview_page.rs  lib.rs  main.rs  petgraph_example_page.rs  ship_overview_page.rs  supply_chain_page.rs  tailwind.rs  trading_opportunity_table.rs  treasurer_experiment_page.rs
st-server/style/: tailwind.css
st-store/: Cargo.toml
st-store/.sqlx/: query-03ef0573d5c74d465a391dad5ebe3af375f7d98723303e3da6755b2c2d230c31.json  query-058bf0b7da6991db1d6d8106c24326136a59d52601c24313c066ea35fdb2d400.json  query-0b1be29847772a31ac3f21e98293dc954b84277d1c9ca8418b6f07d21c2dface.json  query-0f2d9be867d2681250d81cbc79cf889306b1178a6b8bfac0edc68c340a02f351.json  query-1320a9c3beaf7c3ed4999ad949db703797d211d4082571abf64ac9738bc2f1f9.json  query-15a704faccd09f6dc4ec08b147a6a71c2a697e6824267d1ea1b6b209d5a78dea.json  query-1dd6880b5e878465b389537b957c6ccda950ab63d55c4f3bea14e4c53890ef08.json  query-25249dafc5aa43e7c979fd3e826cf6339b84a4e5bfd8bffe10061c55bb3ff6b4.json  query-2bb6c41520d39eb1179d63378cf17e9cd3c9ed1a904fb735d5f219f8cc3912ce.json  query-2e6879e397ae4e1302da83bbef15034989a33c57d73f3e602d15103c54ad2f44.json  query-2f4dfad3006f39e686f6c1f8fdefb6856f46bdbbd6e4a3361084bc66c4e31a8e.json  query-3867cd1619c476d7bef14e23ae47e074d69b5516a78bf7b98afe2acb3bf00f02.json  query-405023884fbf3a70e34da2c133536b5f325fcc3af051ed60b98ddd0316405ecb.json  query-408f6ef86fe4f5a1ed52826fe14d57e04910806c989e2d24313e854d72117081.json  query-417c713c16c1d4dbff86f35154113da6f0e061d7f21cd8a9a06e17224532ad0a.json  query-43d69ef9b2424b018fe7359049a115025eef2beab6d47c106435e83a8f7fff58.json  query-50b3215b99cfaa9dd956d9d3160bed8569488276411ada01c4c24f2e9931fe9c.json  query-53e678def9cf4388dd4df3fde216e1b61146c4ad2922d40fb0c20222972d5e5f.json  query-5f4fb234694458c4998591950ec273b1684d711f620deac4d438b2366d3d2587.json  query-6515a61de40a202917b720d7e783a8bc3f419d6011559e21e352424629f74f8f.json  query-6cbc629975626af3e5b6c1d6a79a33e20cc6ef02e0edbc407a5d5c93ef43a801.json  query-73f7a549bb1b4f8916a05f65b3ba46b32d06b712673f91319f0d3f03d8b9c82c.json  query-767a180f2349303b86bc2eb6cb3308aa2c618736eba22496610fc8e704d219b6.json  query-78259157f589c50b57c04a66fd4609a1f1f8c79889b951ef2db377e57440391a.json  query-795b328e7f37a3c8d64543620d8e4d33564ed3fd850eb5f7bb1a823c376b664d.json  query-7f2214679e5bad5e49915a4dda085c2379e4a3342fcf94a69ce4deda1e44a3ac.json  query-80f4e5ad0d840ad39815d9f3a51eba3d78043e08a6ee425e9762a7cb7421009a.json  query-80fbd905abd6fecdc99e859280c4a48a8541e877e014e5373b0d9d2ba852e9d9.json  query-81c3896175bf2e3241152702cff0293fa23a7f53ca4a524ed93a86eed7ad0ad5.json  query-8ea0325128441aadfd51bfb5d28e1cb80051d6385a32089907713dc8bdd0eaa2.json  query-905064634b97633c35266a9b3d992aac18332c5f7f64cb28f265ff651d885012.json  query-913c8238b02b9398ca32c47eea8c4aa3f7d6ccd08ac7a2cb38fd0341f1046e01.json  query-92f83cf99abfefdb056da94dfb39f3fa87a7afb83ddbf50bce44c990ddb757b4.json  query-94e436c91d9a778bcdd9ee132e8b268b7cc2ab35feb1ac966e824c861037e530.json  query-97aa71b65060d7d0b7f2e569fc749999db9f1f488c090c99a08e9abbabc46f33.json  query-992a46567fd637858bc5c2830c58a7c771677f7bfb079b0894e6c8f8748acd5d.json  query-9b6dbbc5f6fe29fae0a1c828f75b84654bba7936a60c7e3a39f9b34d31e06356.json  query-a381c43bb3360267b48ce510f2e4e8972f328732df737289b545bccf75f7a0af.json  query-ad66e4e234c68fc82f85878de7d7091080c7ea4965f02e2987d1b669dea2ebb0.json  query-b56fa569d5ff8c5850f154814807c128cfbffff69a7114c08241cb71229bc0b5.json  (+23 more)
st-store/migrations/: 20240822132253_create_table_markets.sql  20240910120429_create_table_jump_gates.sql  20240910120436_create_table_shipyards.sql  20250309102338_create_table_ships.sql  20250312164508_create_table_construction_sites.sql  20250324100150_create_table_supply_chain.sql  20250325085327_create_table_completed_fleet_tasks.sql  20250326131701_create_fleet_tables.sql  20250330125706_alter_table_shipyards__append_only.sql  20250402091116_create_table_agent.sql  20250403144216_create_table_trade_tickets.sql  20250404102133_create_table_transactions.sql  20250525164221_create_table_surveys.sql  (+8 more)
(+105 files in other folders)
