[workspace]
members = ["st-core", "st-server", "st-domain", "st-store"]

resolver = "2"

[workspace.dependencies]
tokio = { version = "1" }
rand = { version = "0.9.0" }
itertools = "0.14.0"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.135" }
ordered-float = { version = "5.0.0", features = ["serde"] }
# strum_macros = { version = "0.27" }
strum = { version = "0.27", features = ["derive"] }
anyhow = { version = "1.0.81" }
futures = { version = "0.3.30" }
tracing = { version = "0.1.40" }
mockall = { version = "0.13.0" }
async-trait = { version = "0.1.78" }

# pretty ascii tables
comfy-table = { version = "7.1.4" }
thousands = { version = "0.2.0" }

