[package]
name = "st-domain"
version = "0.1.0"
edition = "2021"

[dependencies]

serde = { workspace = true }
serde_json = { workspace = true }
strum_macros = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
ordered-float = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
anyhow = { workspace = true }
