[package]
name = "st-domain"
version = "0.1.0"
edition = "2021"

[dependencies]

serde = { workspace = true }
serde_json = { workspace = true }
#strum_macros = { workspace = true }
strum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
ordered-float = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
anyhow = { workspace = true, features = ["backtrace"] }
mockall = { workspace = true }
async-trait = { workspace = true }


[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.16.0", features = ["v4", "js", "serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { version = "1.16.0", features = ["v4", "rng", "serde"] }
