[package]
name = "st-store"
version = "0.1.0"
edition = "2021"

[dependencies]

st-domain = { path = "../st-domain" }

serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio-native-tls", "chrono", "migrate", "json", "uuid"] }

anyhow = { workspace = true, features = ["backtrace"] }
chrono = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
